kubernetes/event-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
# Name of the deployment
metadata:
  name: event-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-catalog
  template:
    metadata:
      labels:
        app: event-catalog
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: pubsub-key
      containers:
        - image: ghajduk3/event-catalog:latest
#          Pod name
          name: event-catalog
#          Here we can override environment variables
#          env:
#            - name: KUMULUZEE_DATASOURCES0_CONNECTIONURL
#              value: jdbc:postgresql://lallah.db.elephantsql.com:5432/kryfltbl
#            - name: KUMULUZEE_DATASOURCES0_USERNAME
#              value: kryfltbl
#            - name: KUMULUZEE_DATASOURCES0_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: pg-pass
#                  key: KUMULUZEE_DATASOURCES0_PASSWORD
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 60
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: event-catalog
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: event-catalog
