kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: event-catalog
              servicePort: 8080
            path: /event(/|$)(.*)
          - backend:
              serviceName: image-upload
              servicePort: 8080
            path: /image(/|$)(.*)
          - backend:
              serviceName: location-processing
              servicePort: 8080
            path: /location(/|$)(.*)
#
